--- a/estilo/style.css
+++ b/estilo/style.css
@@ -78,7 +78,7 @@ section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.322);
-    min-width: 400px;
+    max-width: 600px;
     border-radius: 5px;
     text-shadow: 1px 1px 0px black;
 }
