--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,6 +7,7 @@
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2:  'Passion One', cursive;
     --fonte3: 'Sriracha', cursive;
+    --conteiner: width: 100vh;
 }
 
 * {
@@ -18,7 +19,8 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
-    font-family: var(--fonte1);   
+    font-family: var(--fonte1);
+    width: var(--conteiner);   
 }
 
 header {
