--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,7 +7,6 @@
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2:  'Passion One', cursive;
     --fonte3: 'Sriracha', cursive;
-    --conteiner: width: 100vh;
 }
 
 * {
@@ -18,9 +17,9 @@
 
 html, body {
     min-height: 100vh;
+    width: 100vw;
     background-color: darkgray;
-    font-family: var(--fonte1);
-    width: var(--conteiner);   
+    font-family: var(--fonte1);   
 }
 
 header {
@@ -54,7 +53,7 @@ section {
     padding-top: 10vh;
     padding-left: 30px;
     padding-bottom: 10vh;
-    line-height: 2.5em;
+    line-height: 2em;
     font-family: var(--fonte3);
     font-size: 4vw;
 }
@@ -87,7 +86,7 @@ section.imagem > p {
 
 section#img01 {
     background-image: url('../imagens/background001.jpg');
-    background-position: left center;
+    background-position: right center;
 }
 
 section#img02 {
